<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">udacity_channel</string>
    <string name="notification_channel_name">Udacity</string>
    <string name="notification_detail_action">Check download details</string>

    <string name="notification_body_glide">Glide repository downloaded.</string>
    <string name="notification_body_udacity">Udacity repository downloaded.</string>
    <string name="notification_body_retrofit">Retrofit repository downloaded.</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_repository">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_repository">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_repository">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download_status_failed">FAILED</string>
    <string name="download_status_successful">SUCCESSFUL</string>
    <string name="download_status_pending">PENDING</string>
    <string name="download_status_running">RUNNING</string>
    <string name="download_status_paused">PAUSED</string>
    <string name="download_status_error">ERROR</string>
    <string name="file_name_title">File name:</string>
    <string name="download_status_title">Download status:</string>

    <string name="confirm_button_title">OK</string>

    <string name="download_image_content_description">An icon representing the Download action.</string>
    <string name="repositories_radio_group_content_description">All the repositories you can chose to download.</string>
    <string name="glide_radio_content_description">Link for Glide repository.</string>
    <string name="udacity_radio_content_description">Link for Udacity repository.</string>
    <string name="retrofit_radio_content_description">Link for Retrofit repository.</string>
    <string name="download_button_content_description">Tap on this button to download the selected repository.</string>
    <string name="confirm_button_content_description">tap on this button to go back to the MainActivity</string>

</resources>
